# heic-wallpaper

./: .gitignore  Dockerfile  README.md  docker-compose-prod.yml  docker-compose-remote-raspberry.yml  docker-compose.arm.yml  docker-compose.yml  package-lock.json  remote-celery.sh  remote-worker.yml  start.sh
.husky/: pre-commit
api/: Dockerfile  app.py  heic.py  requirements.txt  tasks.py
backend/: Dockerfile  __init__.py  app.py  app_OLD.py  heic.py  image.py  jwt_authentik.py  minio_docker_cmd.sh  requirements.txt  sample.env  tasks.py
desktop/: authentik_integration.py  change_wallpaper.py  cli.py  cli.spec  config_utils.py  heicwallpaper_utils.py  requirements.txt  service.py  wallpaper_utils.py
djangobackend/: db.sqlite3  pyproject.toml
djangobackend/api/: models.py  serializers.py  tasks.py  views.py
djangobackend/api/migrations/: 0001_initial.py
djangobackend/api/services/: image_service.py  s3_service.py  wallpaper_service.py
djangobackend/api/views/: __init__.py  upload.py  wallpaper.py
djangobackend/core/: authentication.py  models.py  serializers.py  views.py
djangobackend/core/migrations/: 0001_initial.py
djangobackend/djangobackend/: celery.py  pagination.py  settings.py  urls.py
djangobackend/wallpaper/: apps.py  models.py  serializers.py  tasks.py
djangobackend/wallpaper/migrations/: 0001_initial.py  0002_alter_wallpaper_data_alter_wallpaper_status.py
djangobackend/wallpaper/services/: heic_service.py  s3_service.py  wallpaper_service.py
djangobackend/wallpaper/views/: upload.py  wallpaper.py
frontend/: .env  README.md  (+4 more)
(+49 files in other folders)
